# ta-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  01_PRD.md  02_PROJECT_PLAN.md  HANDOFF.md  KUBERA.md  Makefile  README.md  make.ps1  pyproject.toml
.claude/commands/: wf-analysis.md
configs/universes/: nifty100_changes.yaml
docs/: architecture.md  kubera-learnings.md
jobs/: __init__.py  daily_ingest.py  daily_predict.py  monthly_retrain.py  news_classify.py  run_india_pipeline.py  run_pipeline.py  scheduler.py
scripts/: analyze_10yr_walkforward.py  analyze_nifty100_walkforward.py  analyze_strict_wf_partial.py  audit_corporate_actions.py  audit_nifty_pit.py  backfill_delisted_sp500.py  backfill_niftybees.py  backfill_predictions.py  backtest_summary.py  backup_predictions_loop.py  build_dataset.py  build_features.py  clean_ohlcv_and_membership.py  compare_walkforward.py  freshen_universe.py  healthcheck.py  ib_backfill.py  kite_backfill.py  kite_login.py  kubera_alpaca_dryrun.py  kubera_ib_dryrun.py  monthly_wf_report.py  optimize_stop_loss.py  refresh_earnings.py  refresh_edgar_filings.py  refresh_macro.py  refresh_sec_fundamentals.py  refresh_sec_fundamentals_chunk.py  refresh_sector_etfs.py  refresh_sectors.py  refresh_universes.py  register_windows_tasks.ps1  repair_ohlcv.py  restore_predictions_backup.py  run_india_pipeline.cmd  run_monthly_retrain.cmd  run_pipeline.cmd  run_quarterly_retune.cmd  safe_worktree_remove.ps1  tax_adjusted_comparison.py  (+10 more)
scripts/windows/: README.md  api_loop.cmd  install_autostart.cmd  run_api.cmd  run_scheduler.cmd  run_wf_gated.cmd  start_backup.cmd  start_kubera.cmd  start_scheduler.cmd  stop_kubera.cmd  uninstall_autostart.cmd
services/: __init__.py
services/alpaca/: __init__.py  connection.py  db.py  engine.py  engine_state.py  orders.py  reconciliation.py  sync.py
services/api/: __init__.py  deps.py  main.py  schemas.py
services/frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
services/ibkr/: __init__.py  connection.py  db.py  orders.py  reconciliation.py  sync.py
tests/integration/: test_api_e2e.py  test_end_to_end.py  test_train_e2e.py
tests/unit/: fixtures_sp500.html  test_api_routes.py  test_corporate_actions.py  test_daily_ingest.py  test_dataset.py  test_earnings.py  test_evaluate.py  test_explain.py  test_features_basic.py  test_features_causality.py  test_ib_adapter.py  test_interactions.py  test_kite_adapter.py  test_labels.py  test_macro.py  test_nifty100_pit.py  test_predict.py  (+11 more)
(+61 files in other folders)
